atg/torch_wrapper_gen.odin

	atg_avg_pool3d :: proc(out: ^Tensor, self: Tensor, kernel_size_data: [^]i64, kernel_size_len: c.int, stride_data: [^]i64, stride_len: c.int, padding_data: [^]i64, padding_len: c.int, ceil_mode: c.int, count_include_pad: c.int, divisor_override_v: i64, divisor_override_null: rawptr) ---
	atg_avg_pool3d_backward :: proc(out: ^Tensor, grad_output: Tensor, self: Tensor, kernel_size_data: [^]i64, kernel_size_len: c.int, stride_data: [^]i64, stride_len: c.int, padding_data: [^]i64, padding_len: c.int, ceil_mode: c.int, count_include_pad: c.int, divisor_override_v: i64, divisor_override_null: rawptr) ---
	atg_avg_pool3d_backward_grad_input :: proc(out: ^Tensor, grad_input: Tensor, grad_output: Tensor, self: Tensor, kernel_size_data: [^]i64, kernel_size_len: c.int, stride_data: [^]i64, stride_len: c.int, padding_data: [^]i64, padding_len: c.int, ceil_mode: c.int, count_include_pad: c.int, divisor_override_v: i64, divisor_override_null: rawptr) ---
	atg_avg_pool3d_out :: proc(out: ^Tensor, self: Tensor, kernel_size_data: [^]i64, kernel_size_len: c.int, stride_data: [^]i64, stride_len: c.int, padding_data: [^]i64, padding_len: c.int, ceil_mode: c.int, count_include_pad: c.int, divisor_override_v: i64, divisor_override_null: rawptr) ---
	atg_baddbmm :: proc(out: ^Tensor, self: Tensor, batch1: Tensor, batch2: Tensor, beta: Scalar, alpha: Scalar) ---
	atg_baddbmm_ :: proc(out: ^Tensor, self: Tensor, batch1: Tensor, batch2: Tensor) ---
	atg_baddbmm_dtype :: proc(out: ^Tensor, self: Tensor, batch1: Tensor, batch2: Tensor, out_dtype: c.int, beta: Scalar, alpha: Scalar) ---
	atg_baddbmm_dtype_out :: proc(out: ^Tensor, self: Tensor, batch1: Tensor, batch2: Tensor, out_dtype: c.int) ---
	atg_baddbmm_out :: proc(out: ^Tensor, self: Tensor, batch1: Tensor, batch2: Tensor) ---
	atg_bartlett_window :: proc(out: ^Tensor, window_length: i64, options_kind: c.int, options_device: c.int) ---
	atg_bartlett_window_out :: proc(out: ^Tensor, window_length: i64) ---
	atg_bartlett_window_periodic :: proc(out: ^Tensor, window_length: i64, periodic: c.int, options_kind: c.int, options_device: c.int) ---
	atg_bartlett_window_periodic_out :: proc(out: ^Tensor, window_length: i64, periodic: c.int) ---
	atg_batch_norm :: proc(out: ^Tensor, input: Tensor, weight: Tensor, bias: Tensor, running_mean: Tensor, running_var: Tensor, training: c.int, momentum: f64, eps: f64, cudnn_enabled: c.int) ---
	atg_batch_norm_backward_elemt :: proc(out: ^Tensor, grad_out: Tensor, input: Tensor, mean: Tensor, invstd: Tensor, weight: Tensor, sum_dy: Tensor, sum_dy_xmu: Tensor, count: Tensor) ---
	atg_batch_norm_backward_elemt_out :: proc(out: ^Tensor, grad_out: Tensor, input: Tensor, mean: Tensor, invstd: Tensor, weight: Tensor, sum_dy: Tensor, sum_dy_xmu: Tensor, count: Tensor) ---
	atg_batch_norm_backward_reduce :: proc(out: ^Tensor, grad_out: Tensor, input: Tensor, mean: Tensor, invstd: Tensor, weight: Tensor, input_g: c.int, weight_g: c.int, bias_g: c.int) ---
	atg_batch_norm_backward_reduce_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, out2: Tensor, out3: Tensor, grad_out: Tensor, input: Tensor, mean: Tensor, invstd: Tensor, weight: Tensor, input_g: c.int, weight_g: c.int, bias_g: c.int) ---
	atg_batch_norm_elemt :: proc(out: ^Tensor, input: Tensor, weight: Tensor, bias: Tensor, mean: Tensor, invstd: Tensor, eps: f64) ---
	atg_batch_norm_elemt_out :: proc(out: ^Tensor, input: Tensor, weight: Tensor, bias: Tensor, mean: Tensor, invstd: Tensor, eps: f64) ---
	atg_batch_norm_gather_stats :: proc(out: ^Tensor, input: Tensor, mean: Tensor, invstd: Tensor, running_mean: Tensor, running_var: Tensor, momentum: f64, eps: f64, count: i64) ---
	atg_batch_norm_gather_stats_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, input: Tensor, mean: Tensor, invstd: Tensor, running_mean: Tensor, running_var: Tensor, momentum: f64, eps: f64, count: i64) ---
	atg_batch_norm_gather_stats_with_counts :: proc(out: ^Tensor, input: Tensor, mean: Tensor, invstd: Tensor, running_mean: Tensor, running_var: Tensor, momentum: f64, eps: f64, counts: Tensor) ---
	atg_batch_norm_gather_stats_with_counts_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, input: Tensor, mean: Tensor, invstd: Tensor, running_mean: Tensor, running_var: Tensor, momentum: f64, eps: f64, counts: Tensor) ---
	atg_batch_norm_stats :: proc(out: ^Tensor, input: Tensor, eps: f64) ---
	atg_batch_norm_stats_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, input: Tensor, eps: f64) ---
	atg_batch_norm_update_stats :: proc(out: ^Tensor, input: Tensor, running_mean: Tensor, running_var: Tensor, momentum: f64) ---
	atg_batch_norm_update_stats_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, input: Tensor, running_mean: Tensor, running_var: Tensor, momentum: f64) ---
	atg_bernoulli :: proc(out: ^Tensor, self: Tensor) ---
	atg_bernoulli_ :: proc(out: ^Tensor, self: Tensor, p: Tensor) ---
	atg_bernoulli_float_ :: proc(out: ^Tensor, self: Tensor, p: f64) ---
	atg_bernoulli_p :: proc(out: ^Tensor, self: Tensor, p: f64) ---
	atg_bernoulli_tensor :: proc(out: ^Tensor, self: Tensor, p: Tensor) ---
	atg_bilinear :: proc(out: ^Tensor, input1: Tensor, input2: Tensor, weight: Tensor, bias: Tensor) ---
	atg_binary_cross_entropy :: proc(out: ^Tensor, self: Tensor, target: Tensor, weight: Tensor, reduction: i64) ---
	atg_binary_cross_entropy_backward :: proc(out: ^Tensor, grad_output: Tensor, self: Tensor, target: Tensor, weight: Tensor, reduction: i64) ---
	atg_binary_cross_entropy_backward_grad_input :: proc(out: ^Tensor, grad_input: Tensor, grad_output: Tensor, self: Tensor, target: Tensor, weight: Tensor, reduction: i64) ---
	atg_binary_cross_entropy_out :: proc(out: ^Tensor, self: Tensor, target: Tensor, weight: Tensor, reduction: i64) ---
	atg_binary_cross_entropy_with_logits :: proc(out: ^Tensor, self: Tensor, target: Tensor, weight: Tensor, pos_weight: Tensor, reduction: i64) ---
	atg_binary_cross_entropy_with_logits_out :: proc(out: ^Tensor, self: Tensor, target: Tensor, weight: Tensor, pos_weight: Tensor, reduction: i64) ---
	atg_bincount :: proc(out: ^Tensor, self: Tensor, weights: Tensor, minlength: i64) ---
	atg_bincount_out :: proc(out: ^Tensor, self: Tensor, weights: Tensor, minlength: i64) ---
	atg_binomial :: proc(out: ^Tensor, count: Tensor, prob: Tensor) ---
	atg_binomial_out :: proc(out: ^Tensor, count: Tensor, prob: Tensor) ---
	atg_bitwise_and :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg_bitwise_and_ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg_bitwise_and_scalar_out :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg_bitwise_and_scalar_tensor :: proc(out: ^Tensor, self_scalar: Scalar, other: Tensor) ---
	atg_bitwise_and_scalar_tensor_out :: proc(out: ^Tensor, self_scalar: Scalar, other: Tensor) ---
	atg_bitwise_and_tensor :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_bitwise_and_tensor_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_bitwise_and_tensor_out :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_bitwise_left_shift :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_bitwise_left_shift_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_bitwise_left_shift_scalar_tensor :: proc(out: ^Tensor, self_scalar: Scalar, other: Tensor) ---
	atg_bitwise_left_shift_scalar_tensor_out :: proc(out: ^Tensor, self_scalar: Scalar, other: Tensor) ---
	atg_bitwise_left_shift_tensor_out :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_bitwise_left_shift_tensor_scalar :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg_bitwise_left_shift_tensor_scalar_ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg_bitwise_left_shift_tensor_scalar_out :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg_bitwise_not :: proc(out: ^Tensor, self: Tensor) ---
	atg_bitwise_not_ :: proc(out: ^Tensor, self: Tensor) ---
	atg_bitwise_not_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_bitwise_or :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg_bitwise_or_ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg_bitwise_or_scalar_out :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg_bitwise_or_scalar_tensor :: proc(out: ^Tensor, self_scalar: Scalar, other: Tensor) ---
	atg_bitwise_or_scalar_tensor_out :: proc(out: ^Tensor, self_scalar: Scalar, other: Tensor) ---
	atg_bitwise_or_tensor :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_bitwise_or_tensor_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_bitwise_or_tensor_out :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_bitwise_right_shift :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_bitwise_right_shift_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_bitwise_right_shift_scalar_tensor :: proc(out: ^Tensor, self_scalar: Scalar, other: Tensor) ---
	atg_bitwise_right_shift_scalar_tensor_out :: proc(out: ^Tensor, self_scalar: Scalar, other: Tensor) ---
	atg_bitwise_right_shift_tensor_out :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_bitwise_right_shift_tensor_scalar :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg_bitwise_right_shift_tensor_scalar_ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg_bitwise_right_shift_tensor_scalar_out :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg_bitwise_xor :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg_bitwise_xor_ :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg_bitwise_xor_scalar_out :: proc(out: ^Tensor, self: Tensor, other: Scalar) ---
	atg_bitwise_xor_scalar_tensor :: proc(out: ^Tensor, self_scalar: Scalar, other: Tensor) ---
	atg_bitwise_xor_scalar_tensor_out :: proc(out: ^Tensor, self_scalar: Scalar, other: Tensor) ---
	atg_bitwise_xor_tensor :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_bitwise_xor_tensor_ :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_bitwise_xor_tensor_out :: proc(out: ^Tensor, self: Tensor, other: Tensor) ---
	atg_blackman_window :: proc(out: ^Tensor, window_length: i64, options_kind: c.int, options_device: c.int) ---
	atg_blackman_window_out :: proc(out: ^Tensor, window_length: i64) ---
	atg_blackman_window_periodic :: proc(out: ^Tensor, window_length: i64, periodic: c.int, options_kind: c.int, options_device: c.int) ---
	atg_blackman_window_periodic_out :: proc(out: ^Tensor, window_length: i64, periodic: c.int) ---
	atg_block_diag :: proc(out: ^Tensor, tensors_data: ^Tensor, tensors_len: c.int) ---
	atg_block_diag_out :: proc(out: ^Tensor, tensors_data: ^Tensor, tensors_len: c.int) ---
	atg_bmm :: proc(out: ^Tensor, self: Tensor, mat2: Tensor) ---
	atg_bmm_dtype :: proc(out: ^Tensor, self: Tensor, mat2: Tensor, out_dtype: c.int) ---
	atg_bmm_dtype_out :: proc(out: ^Tensor, self: Tensor, mat2: Tensor, out_dtype: c.int) ---
	atg_bmm_out :: proc(out: ^Tensor, self: Tensor, mat2: Tensor) ---
	atg_broadcast_to :: proc(out: ^Tensor, self: Tensor, size_data: [^]i64, size_len: c.int) ---
	atg_bucketize :: proc(out: ^Tensor, self: Tensor, boundaries: Tensor, out_int32: c.int, right: c.int) ---
	atg_bucketize_scalar :: proc(out: ^Tensor, self_scalar: Scalar, boundaries: Tensor, out_int32: c.int, right: c.int) ---
	atg_bucketize_scalar_out :: proc(out: ^Tensor, self_scalar: Scalar, boundaries: Tensor, out_int32: c.int, right: c.int) ---
	atg_bucketize_tensor_out :: proc(out: ^Tensor, self: Tensor, boundaries: Tensor, out_int32: c.int, right: c.int) ---
	atg_cartesian_prod :: proc(out: ^Tensor, tensors_data: ^Tensor, tensors_len: c.int) ---
	atg_cat :: proc(out: ^Tensor, tensors_data: ^Tensor, tensors_len: c.int, dim: i64) ---
	atg_cat_out :: proc(out: ^Tensor, tensors_data: ^Tensor, tensors_len: c.int, dim: i64) ---
	atg_cauchy :: proc(out: ^Tensor, self: Tensor, median: f64, sigma: f64) ---
	atg_cauchy_ :: proc(out: ^Tensor, self: Tensor, median: f64, sigma: f64) ---
	atg_cauchy_out :: proc(out: ^Tensor, self: Tensor, median: f64, sigma: f64) ---
